fix: fix debug version

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
 		"symfony/filesystem": "^5.4",
-        "kora/debug": "dev-main",
+        "kora/debug": "^0.1",
         "symfony/var-dumper": "^5.4"
     },
     "autoload": {
